# Manifold

./: Plan to implement.md  Plan: Migrate to @provablehq Wallet Adap.md  README.md
Frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  wagmi.config.ts
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/app/admin/: page.tsx
Frontend/app/api/markets/: route.ts
Frontend/components/: navbar.tsx  portfolio.tsx  providers.tsx
Frontend/components/market/: activity-feed.tsx  event-detail.tsx  featured-market.tsx  market-card.tsx  market-filters.tsx  trading-panel.tsx
Frontend/components/ui/: badge.tsx
Frontend/hooks/: use-aleo-pools.ts  use-on-chain-pool.ts  use-prediction.ts  use-user-predictions.ts
Frontend/lib/: aleo-client.ts  api-client.ts  utils.ts
Frontend/types/: index.ts
Oracle/: .env.example  .gitignore  README.md  cli.py  cli.ts  config.py  config.ts  db.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  test_network.ts  tsconfig.json  worker.py  worker.ts
Oracle/metrics/: base.ts  eth_price.py  eth_price.ts  eth_staking.py  eth_staking.ts  registry.py  registry.ts
Oracle/python_old/: cli.py  config.py  db.py  worker.py
Oracle/python_old/metrics/: base.py
Oracle/src/: cli.ts  config.ts  db.ts  worker.ts
Oracle/src/metrics/: btc_dominance.ts  eth_gas_price.ts  fear_greed.ts  registry.ts  stablecoin_peg.ts
prediction/: program.json  readme.md
prediction/deploy_tx/: predictionprivacyhack.aleo.deployment.json  predictionprivacyhackvii.aleo.deployment.json
prediction/src/: main.leo
(+1 files in other folders)
